--- a/style.css
+++ b/style.css
@@ -4,58 +4,42 @@ body {
 
 div {
   padding: 0.7rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   border: 1px solid red;
 }
-
 div h1 {
   line-height: 1.6;
   color: green;
   border-bottom: 2px solid blue;
 }
-
 div section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
 }
-
 div section p {
   padding: 1.4rem 0.7rem;
   text-align: center;
 }
-
+div section:last-child {
+  font-size: 24px;
+}
 div section:last-child article {
   color: green;
   border: 1px solid blue;
   font-size: 1.5rem;
   margin-top: 0.7rem;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
 }
-
 div article:nth-child(odd) {
   color: blue;
   border: 1px solid green;
   font-size: 1rem;
 }
-
 div article:nth-child(even) {
   color: red;
   border: 1px solid green;
   font-size: 1rem;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
